Add functionality to display players filtered by selected selected team.

--- a/src/client/app/components/teams/teams.html
+++ b/src/client/app/components/teams/teams.html
@@ -1,8 +1,9 @@
 <section class="teams">
-  <h2>Teams</h2>
+  <h2 ng-click="$ctrl.onTeamSelection(null)">Teams</h2>
   <ul>
     <li ng-repeat="team in $ctrl.teams">
       <team-item 
+        ng-class="{'selected-team': $ctrl.isSelectedTeam(team)}"
         select-team="$ctrl.onTeamSelection(team)" 
         team="team">
       </team-item>
